0.1.3-SNAPSHOT
* Adds KeyFromSecret() function
* Change default cloud url to https://db.fauna.com

0.1.2
* Adds PermissionDenied exception
* Uses NUnit adapter to run tests on Visual Studio
* Removes Count() function
* Adds Database(), Index(), Class() reference constructor functions
* Adds CreateClass(), CreateDatabase(), CreateIndex() and CreateKey() functions

0.1.1
* Change default cloud url to https://cloud.faunadb.com

0.1.0
* First public release
