@@ -87,5 +87,6 @@
     <Compile Include="Collections\DictionaryExtension.cs" />
     <Compile Include="Query\PageHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\BytesV.cs" />
   </ItemGroup>
 </Project>
